objects/Integration_Result__c.object
<CustomObject>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <label>Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Name__c</fullName>
        <label>Integration Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Type__c</fullName>
        <label>Integration Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Message__c</fullName>
        <label>Request Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sobject_name__c</fullName>
        <label>Sobject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordId__c</fullName>
        <label>recordId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>response_message__c</fullName>
        <label>Response Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Integration Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Integration_Name__c</columns>
        <columns>recordId__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>Sobject_name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Integration_Name__c</columns>
        <columns>recordId__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>Request_Message__c</columns>
        <columns>response_message__c</columns>
        <columns>Sobject_name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Created Today</label>
    </listViews>
    <listViews>
        <fullName>All_Transportation_Results</fullName>
        <columns>NAME</columns>
        <columns>Integration_Name__c</columns>
        <columns>Integration_Type__c</columns>
        <columns>Sobject_name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Name__c</field>
            <operation>contains</operation>
            <value>Transportation Request</value>
        </filters>
        <label>All Transportation Results</label>
    </listViews>
    <listViews>
        <fullName>Create_Arb</fullName>
        <columns>NAME</columns>
        <columns>Integration_Name__c</columns>
        <columns>Integration_Type__c</columns>
        <columns>Sobject_name__c</columns>
        <columns>recordId__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Name__c</field>
            <operation>contains</operation>
            <value>arb</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Create Arb</label>
    </listViews>
    <listViews>
        <fullName>Create_Complaint</fullName>
        <columns>NAME</columns>
        <columns>recordId__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>response_message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Name__c</field>
            <operation>equals</operation>
            <value>Create Complaint</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Create Complaint</label>
    </listViews>
    <listViews>
        <fullName>Create_Pricing</fullName>
        <columns>NAME</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Name__c</field>
            <operation>equals</operation>
            <value>Create Pricing</value>
        </filters>
        <label>Create Pricing</label>
        <sharedTo>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Create_Resolution</fullName>
        <columns>NAME</columns>
        <columns>Integration_Name__c</columns>
        <columns>Integration_Type__c</columns>
        <columns>Sobject_name__c</columns>
        <columns>recordId__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Name__c</field>
            <operation>equals</operation>
            <value>Create Adjustment</value>
        </filters>
        <label>Create Resolution</label>
    </listViews>
    <listViews>
        <fullName>Create_Shipment</fullName>
        <columns>NAME</columns>
        <columns>Integration_Name__c</columns>
        <columns>Integration_Type__c</columns>
        <columns>Sobject_name__c</columns>
        <columns>recordId__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Name__c</field>
            <operation>equals</operation>
            <value>Create Shipment</value>
        </filters>
        <label>Create Shipment</label>
    </listViews>
    <listViews>
        <fullName>Create_Shipment_Errors</fullName>
        <columns>NAME</columns>
        <columns>Integration_Name__c</columns>
        <columns>Integration_Type__c</columns>
        <columns>Sobject_name__c</columns>
        <columns>recordId__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Name__c</field>
            <operation>equals</operation>
            <value>Create Shipment</value>
        </filters>
        <filters>
            <field>Status_Code__c</field>
            <operation>notEqual</operation>
            <value>201</value>
        </filters>
        <label>Create Shipment Errors</label>
    </listViews>
    <listViews>
        <fullName>Errors</fullName>
        <columns>NAME</columns>
        <columns>Integration_Name__c</columns>
        <columns>Integration_Type__c</columns>
        <columns>Sobject_name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_Code__c</field>
            <operation>notEqual</operation>
            <value>200,201</value>
        </filters>
        <label>Errors</label>
    </listViews>
    <listViews>
        <fullName>Failed_Adjustments</fullName>
        <columns>NAME</columns>
        <columns>Sobject_name__c</columns>
        <columns>recordId__c</columns>
        <columns>Integration_Name__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>response_message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Name__c</field>
            <operation>contains</operation>
            <value>Adjustment</value>
        </filters>
        <filters>
            <field>Status_Code__c</field>
            <operation>notEqual</operation>
            <value>200</value>
        </filters>
        <label>Failed Adjustments</label>
    </listViews>
    <listViews>
        <fullName>Geopointe</fullName>
        <columns>NAME</columns>
        <columns>Integration_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>response_message__c</columns>
        <columns>recordId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Name__c</field>
            <operation>contains</operation>
            <value>Geopoint</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Geopointe</label>
    </listViews>
    <listViews>
        <fullName>GroupEvent_Events</fullName>
        <columns>NAME</columns>
        <columns>Integration_Name__c</columns>
        <columns>Integration_Type__c</columns>
        <columns>Sobject_name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Jake Bass</value>
        </filters>
        <label>Group Events</label>
    </listViews>
    <listViews>
        <fullName>Parent_Events</fullName>
        <columns>NAME</columns>
        <columns>Integration_Name__c</columns>
        <columns>Integration_Type__c</columns>
        <columns>Sobject_name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Name__c</field>
            <operation>contains</operation>
            <value>Affiliation</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Parent Events</label>
    </listViews>
    <listViews>
        <fullName>Successful_Adjustments</fullName>
        <columns>NAME</columns>
        <columns>Sobject_name__c</columns>
        <columns>recordId__c</columns>
        <columns>Integration_Name__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>response_message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Name__c</field>
            <operation>contains</operation>
            <value>Adjustment</value>
        </filters>
        <filters>
            <field>Status_Code__c</field>
            <operation>equals</operation>
            <value>200</value>
        </filters>
        <label>Successful Adjustments</label>
    </listViews>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>